--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "homepage": "https://burinib.github.io/ecommerce-react",
+  "homepage": "https://burinib.github.io/react-ecommerce",
   "name": "react-ecommerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
